19/NetworkConnection/mydeploy-svc.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy
  labels:
    app: mydeploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mypod
  template:
    metadata:
      labels:
        app: mypod
    spec:
      containers:
        - name: mycontainer
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  selector:
    app: mypod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
